--- a/exercises/schema-management.adoc
+++ b/exercises/schema-management.adoc
@@ -123,7 +123,7 @@ Sent Key:driver-1 Latitude:47.618579488930855 Longitude:-122.35494018791431
 
 . Stop the debugger in VS Code.
 
-=== Inspecting the Schema Registry REST API
+=== *OPTIONAL:* Inspecting the Schema Registry REST API
 
 Next you will inspect the contents and settings of Schema Registry via the REST API. See more details about the API at https://docs.confluent.io/current/schema-registry/develop/api.html[Schema Registry API Reference^].
 
